--- a/Views/Shared/PartialProductList.cshtml
+++ b/Views/Shared/PartialProductList.cshtml
@@ -33,7 +33,7 @@
     <div class="col-md-12">
         <h3>Selected Products:</h3>
         <div class="hidden" id="selectedProductsDiv">
-            <label id="selectedlabel"></label>
+            <label id="selectedlabel">Selected products from search</label>
             <ul class="list-inline">
                 <li class="prodList" style="border: 1px solid rgba(9, 0, 90, 0.75);border-radius: 4px;padding: 6px 12px; margin:5px;">
                     <label id="innerLabel">
@@ -165,9 +165,7 @@
                 if (response != null) {
                     $('#label, #innerLabel').empty();
                     var allListItems = $('#searchedProducts > li');
-                    //var checkedItems = $('#searchedProducts').find("input:checked");
                     $('#searchedProducts').empty();
-                    //$('#selectedProducts').empty();
                     $('#label').append('Search Result for: ' + $('#searchText').val());
                     
 
