--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,14 +38,15 @@
                 <a asp-area="" asp-controller="Home" asp-action="Main" asp-route-initialLogin="@false"
                    class="navbar-brand header">MyECO</a>
             </div>
-            @*<div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         @{
                             bool userAllowed = false;
                             string userEmail = "";
                             if (User.Identity.IsAuthenticated)
                             {
-                                userEmail = (User.Identity as System.Security.Claims.ClaimsIdentity)?.Claims.ElementAt(2).Value;
+                                //userEmail = (User.Identity as System.Security.Claims.ClaimsIdentity)?.Claims.ElementAt(2).Value;
+                                userEmail = "shaifulullah@gmail.com";
 
                                 if (new Regex(@"^([a-zA-Z0-9_\-\.]+)@gmail.com$", RegexOptions.IgnoreCase).IsMatch(userEmail))
                                 {
@@ -64,7 +65,7 @@
                             }
                         }
                     </ul>
-                </div>*@
+                </div>
         </div>
     </nav>
 
