--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,9 +7,9 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico">
-
     @* CUSTOM SCRIPTS *@
     <script src="~/js/functions.js"></script>
+    <script src="~/js/jquery.blockUI.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
     <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet" />
@@ -35,8 +35,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Main" asp-route-initialLogin="@false"
-                   class="navbar-brand header">MyECO</a>
+                <a class="navbar-brand header" style="cursor:pointer" onclick="blockuiForHome('Home', 'Main')">MyECO</a>
+                @*<a asp-area="" asp-controller="Home" asp-action="Main" asp-route-initialLogin="@false"
+        class="navbar-brand header">MyECO</a>*@
             </div>
             <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
